
    
    
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:gravity="left"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/panel_title"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/splash_title"
            android:textSize="@dimen/text_h1" />

        <TextView
            android:id="@+id/textSubtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/splash_subtitle"
            android:textColor="@color/orange"
            android:textSize="@dimen/text_h2" />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/logo"
        android:layout_height="@dimen/logo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/splash_siritinga"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:src="@drawable/jack3" />

    <ImageButton
        android:id="@+id/button1"
        android:contentDescription="@string/title_activity_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        android:src="@drawable/rss"
        android:visibility="visible" />



</RelativeLayout>